dark mode fix for rwd

--- a/src/Moonglade.Web/wwwroot/css/src/darkmode.css
+++ b/src/Moonglade.Web/wwwroot/css/src/darkmode.css
@@ -95,3 +95,9 @@
     border: 1px solid #333;
     color: #CCC;
 }
+
+@media (max-width: 767px) {
+    .darkmode .article-post-summary {
+        border-bottom: 1px solid #333;
+    }
+}
